--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser-dynamic": "~8.2.7",
     "@angular/router": "~8.2.7",
     "@ng-bootstrap/ng-bootstrap": "^5.1.1",
+    "angular-feather": "^6.0.2",
     "bootstrap": "^4.3.1",
     "rxjs": "~6.4.0",
     "save": "^2.4.0",
